--- a/style.css
+++ b/style.css
@@ -119,3 +119,8 @@ input:focus {
     font-weight: bold;
     margin: 2rem;
 }
+
+// ISSUE #01 - Refactor the reset button (apr 2025)
+.reset-confirmation {
+			display: none;
+}
